# mono-wrapper

./: .gitignore  CMakeLists.txt  script.cs
dll/: CMakeLists.txt  test-dll.cpp
src/: CMakeLists.txt  domain.cpp  domain.h  main.cpp  utils.cpp  utils.h
test/: CMakeLists.txt  test.cpp
test/csharp/: CMakeLists.txt  script.cs
